--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "App\\": "src/"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "3.*"
     }
 }
